--- a/index.html
+++ b/index.html
@@ -2,6 +2,17 @@
 <html>
     <head>
         <meta charset="utf-8" />
+
+        <meta property="og:title" content="Netoo Website" />
+        <meta property="og:description" content="Explore the Netoo Website for blogs, portfolios, and more." />
+        <meta property="og:url" content="https://net00s.github.io/NetooWebsite/" />
+        <meta property="og:image" content="https://net00s.github.io/NetooWebsite/images/preview.png" />
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta name="twitter:title" content="Netoo Website" />
+        <meta name="twitter:description" content="ITS MEEEEE!" />
+        <meta name="twitter:image" content="https://net00s.github.io/NetooWebsite/images/preview.png" />
+        <meta name="theme-color" content="#FF5733" />
+
         <title>Netoo!</title>
         <link rel="stylesheet" href="RealStyle.css" />
         <style>
