--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
 
         <meta property="og:title" content="THE Netoo Website" />
-        <meta property="og:description" content="Explore the Netoo Website for blogs, portfolios, and more." />
+        <meta property="og:description" content="ITS MEEEE!!!!" />
         <meta property="og:url" content="https://net00s.github.io/NetooWebsite/" />
         <meta property="og:image" content="https://net00s.github.io/NetooWebsite/images/preview.png" />
         <meta name="twitter:card" content="summary_large_image" />
