--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
     <head>
         <meta charset="utf-8" />
 
+        <meta name="description" content="My website for portfolio and blog.">
+        <meta name="author" content="Netoo">
+        <meta name="keywords" content="netoo, blog, portfolio, art">
+
         <meta property="og:title" content="THE Netoo Website" />
         <meta property="og:description" content="ITS MEEEE!!!!" />
         <meta property="og:url" content="https://net00s.github.io/NetooWebsite/" />
