--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
         <meta name="author" content="Netoo">
         <meta name="keywords" content="netoo, blog, portfolio, art">
 
+        <meta name="google-site-verification" content="IqkDT0-3eC6uL28aupPi8mY6jz-rySU-y26ztP8K6vg" />
+
         <meta property="og:title" content="THE Netoo Website" />
         <meta property="og:description" content="ITS MEEEE!!!!" />
         <meta property="og:url" content="https://net00s.github.io/NetooWebsite/" />
