favcon + blue gradient

--- a/About.html
+++ b/About.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <title>About</title>
+        <link rel="icon" type="image/x-icon" href="https://i.postimg.cc/YS04RxK6/Bravo-apelsinjuice.png">
         <link rel="stylesheet" href="RealStyle.css" />
     </head>
     <style>
