--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <meta name="theme-color" content="#FF5733" />
 
         <title>Netoo!</title>
+        <link rel="icon" type="image/x-icon" href="https://i.postimg.cc/YS04RxK6/Bravo-apelsinjuice.png">
         <link rel="stylesheet" href="RealStyle.css" />
         <style>
             body
