--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
 
         <nav style="display: flex; align-items: center; gap: 5px;">
             <a href="javascript:history.back()">Back</a>
-            <img src="https://i.postimg.cc/dQmk1CNB/image.png" alt="Red arrow pointing to Back" style="transform: scaleX(-1);">
+            <img src="https://i.postimg.cc/dQmk1CNB/image.png" alt="Red arrow pointing to Back" style="transform: scaleX(-1); "class="arrow">
         </nav>
         <br>
         <div class="container">
