--- a/About.html
+++ b/About.html
@@ -20,7 +20,7 @@
 
         <nav style="display: flex; align-items: center; gap: 5px;">
             <a href="javascript:history.back()">Back</a>
-            <img src="https://i.postimg.cc/dQmk1CNB/image.png" alt="Red arrow pointing to Back" style="transform: scaleX(-1);">
+            <img src="https://i.postimg.cc/dQmk1CNB/image.png" alt="Red arrow pointing to Back" style="transform: scaleX(-1);"class="arrow">
         </nav>
 
         <h1>Hello! my name is Netoo!</h1>
