--- a/Blog.html
+++ b/Blog.html
@@ -19,7 +19,7 @@
 
         <nav style="display: flex; align-items: center; gap: 5px;">
             <a href=javascript:history.back()>Back</a>
-            <img src="https://i.postimg.cc/dQmk1CNB/image.png" alt="Red arrow pointing to back" style="transform: scaleX(-1);">
+            <img src="https://i.postimg.cc/dQmk1CNB/image.png" alt="Red arrow pointing to back" style="transform: scaleX(-1);"class="arrow">
         </nav>
 
         <h1>This is my "blog" where i spout political and gaming opinions!</h1>
