--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 
         
             
-        <img src="https://net00s.github.io/NetooWebsite/images/Cloud1.png" class="cloud1">
-        <img src="https://net00s.github.io/NetooWebsite/images/Cloud1.png" class="cloud2">
+        <img src="images/Cloud1.png" class="cloud1">
+        <img src="images/Cloud1.png" class="cloud2">
 
         <script>
             function randomCloudPosition(cloud)
