--- a/Blog.html
+++ b/Blog.html
@@ -38,6 +38,11 @@
                 <p>this is here so i can see how it looks when i have multible articles.</p>
             </article>
 
+            <article>
+                <p>2025-10-13 | Hamburg</p>
+                <p>Went to hamburg for 5 days to see The Cat Empire live, it was pretty cool but now my feet hurt from all the walking around the city. There wasn't a building in Hamburg that didn't have at least a little bit of grafitti on it wich i found intresting.</p>
+            </article>
+
             
 
         </section>
