--- a/Blog.html
+++ b/Blog.html
@@ -7,10 +7,7 @@
         <link rel="stylesheet" href="RealStyle.css" />
     </head>
     <style>
-        body
-        {
-            height:100vh;
-        }
+       
     </style>
     <body>
         <Header>
@@ -22,7 +19,7 @@
             <img src="https://i.postimg.cc/dQmk1CNB/image.png" alt="Red arrow pointing to back" style="transform: scaleX(-1);"class="arrow">
         </nav>
 
-        <h1>This is my "blog" where i spout political and gaming opinions!</h1>
+        <h1>This is my "blog" where I spout political and gaming opinions!</h1>
 
 
 
@@ -40,7 +37,12 @@
 
             <article>
                 <p>2025-10-13 | Hamburg</p>
-                <p>Went to hamburg for 5 days to see The Cat Empire live, it was pretty cool but now my feet hurt from all the walking around the city. There wasn't a building in Hamburg that didn't have at least a little bit of grafitti on it wich i found intresting.</p>
+                <p>Went to hamburg for 5 days to see The Cat Empire live, it was pretty cool but now my feet hurt from all the walking around the city. There wasn't a building in Hamburg that didn't have at least a little bit of grafitti on it wich i found interesting.</p>
+            </article>
+
+            <article>
+                <p class="trans">2025-10-14 | <span>T</span><span>r</span><span>a</span><span>n</span><span>s</span> peeps</p>
+                <p>I love you all. I will fight for you.</p>
             </article>
 
             
