--- a/Blog.html
+++ b/Blog.html
@@ -45,6 +45,11 @@
                 <p>I love you all. I will fight for you.</p>
             </article>
 
+            <article>
+                <p>2025-10-21 | I Saw The TV Glow</p>
+                <p>Last weekend I saw I Saw The TV Glow with my partner. Very cool movie, one of those that will sit in my head for a long time.</p>
+            </article>
+
             
 
             
