--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
         <meta name="description" content="My website for portfolio and blog.">
         <meta name="author" content="Netoo">
-        <meta name="keywords" content="Netoo, blog, portfolio, art, Net00s, gay, queer, Netoos">
+        <meta name="keywords" content="Netoo, blog, portfolio, art, Net00s, gay, queer, Netoos, website, github, cat, furry">
 
         <meta name="google-site-verification" content="IqkDT0-3eC6uL28aupPi8mY6jz-rySU-y26ztP8K6vg" />
 
